contrast buttons fixed

--- a/css/style.css
+++ b/css/style.css
@@ -677,7 +677,7 @@ header {
       padding: 0.4rem 0;
       width: 100%;
       background-color: #f09c00;
-      color: whitesmoke;
+      color: #070707;
       border-radius: 4px;
       transition: all 500ms ease; }
     .service__description--container a button:hover {
