--- a/scss/pages/_services.scss
+++ b/scss/pages/_services.scss
@@ -132,7 +132,7 @@
             padding: 0.4rem 0;
             width: 100%;
             background-color: $hover-color;
-            color: whitesmoke;
+            color: $primary-color;
             border-radius: 4px;
             transition: all 500ms ease;
         }
